cluster/apps/recipes/recipes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  namespace: recipes
  labels:
    app: recipes
    tier: frontend
    environment: production
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: recipes
      environment: production
  template:
    metadata:
      annotations:
        configmap.reloader.stakater.com/reload: "recipes-config, recipes-nginx-config"
      labels:
        app: recipes
        tier: frontend
        environment: production
    spec:
      nodeSelector:
        node-type: worker
      restartPolicy: Always
      serviceAccount: recipes
      serviceAccountName: recipes
      containers:
      - name: recipes-nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
          - name: gunicorn
            containerPort: 8080
            protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
        volumeMounts:
          - mountPath: /media
            name: media
            subPath: files  # mount as subPath due to lost+found on ext4 pvc
          - mountPath: /static
            name: static
            subPath: files  # mount as subPath due to lost+found on ext4 pvc
          - name: nginx-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx-config
            readOnly: true
      - name: recipes
        image: vabene1111/recipes:1.0.4
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 65534
        command:
          - /opt/recipes/venv/bin/gunicorn
          - -b
          - :8080
          - --access-logfile
          - "-"
          - --error-logfile
          - "-"
          - --log-level
          - INFO
          - recipes.wsgi
        startupProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
          successThreshold: 1
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10 #30
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10 #30
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
        volumeMounts:
          - mountPath: /opt/recipes/mediafiles
            name: media
            subPath: files  # mount as subPath due to lost+found on ext4 pvc
          - mountPath: /opt/recipes/staticfiles
            name: static
            subPath: files # mount as subPath due to lost+found on ext4 pvc
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: recipes-media-pvc
        - name: static
          persistentVolumeClaim:
            claimName: recipes-static-pvc
        - name: nginx-config
          configMap:
            name: recipes-nginx-config
