cluster/apps/recipes/recipes-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: recipes
  labels:
    app: recipes
    tier: frontend
spec:
  selector:
    app: recipes
    tier: frontend
    environment: production
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: gunicorn
    port: 8080
    protocol: TCP
    targetPort: gunicorn
